mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: middleware
  labels:
    app: mysql
    tier: middleware
spec:
  ports:
  - port: 3306
    name: mysql
    nodePort: 30306
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: mysql
    tier: middleware
